test/compile-fail/resolution/type-existence/type-alias-trait-not-type/top.rhdl
trait X {}
type a = X;
